# ocr_pipeline

./: .env  README.md  config.py  main.py  pen_to_print_client.py  pii_extractor.py  pipeline.py  pyproject.toml  requirements.txt
data/output/logs/: img3_pii.json
data/output/redacted_text/: img2_redacted.txt  img3_redacted.txt
data/output/text/: img1.txt
output/ocr_text/: img1.txt  img2.txt  img3.txt
output/pii_json/: img1.json  img2.json  img3.json
src/ocr_pii_pipeline/: cleaning.py  config.py  pii_detect.py  preprocessing.py  redact_image.py  redact_text.py  tesseract.py
